--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt": "^1.0.0-rc11"
+    "autoprefixer": "^7.2.3",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "nuxt": "^1.0.0-rc11",
+    "postcss-px2rem": "^0.3.0",
+    "vue-style-loader": "^3.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
