--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "autoprefixer": "^7.2.3",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "lodash": "^4.17.4",
     "nuxt": "^1.0.0-rc11",
     "postcss-px2rem": "^0.3.0",
+    "vue-resource": "^1.3.5",
     "vue-style-loader": "^3.0.3"
   },
   "devDependencies": {
